--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,26 @@
 .App {
   text-align: center;
+  padding: 20px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.products-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.card {
+  transition: all 0.3s ease-in-out; 
+  cursor: pointer; 
+}
+.card:hover {
+  background-color: #f8f9fa; 
+  border-color: #dee2e6; 
+  transform: translateY(-5px); 
 }
 
-.App-link {
-  color: #61dafb;
+.cart-item {
+  width: 300px; 
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.total-price {
+  font-size: 24px; 
 }
